[package]
edition      = "2024"
name         = "c6-tft"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "c6-tft"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { git = "https://github.com/esp-rs/esp-hal.git", version = "*", features = ["defmt", "esp32c6", "unstable"] }

esp-rtos = { git = "https://github.com/esp-rs/esp-hal.git", version = "*", features = [
  "defmt",
  "embassy",
  "esp-alloc",
  "esp32c6",
] }

defmt                  = "1.0.1"
esp-bootloader-esp-idf = { git = "https://github.com/esp-rs/esp-hal.git", version = "*", features = ["defmt", "esp32c6"] }

embassy-executor = { version = "0.9.1", features = ["defmt"] }
embassy-time     = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime"] }
esp-alloc        = { version = "0.9.0", features = ["defmt"] }
rtt-target       = { version = "0.6.2", features = ["defmt"] }

critical-section = "1.2.0"
static_cell      = "2.1.1"

#mipidsi = "0.10.0"
mipidsi = { path = "../../../drivers/FORKS/mipidsi", version = "*" }
embedded-hal-bus = "0.3.0"
embassy-sync = "0.7.2"
embassy-embedded-hal = {version="0.5.0", features=["defmt"]}
esp-println      = { version = "0.16.1", features = ["defmt-espflash", "esp32c6"] }

embedded-graphics = "0.8.1"
profont = "0.7.0"
arrayvec = { version="0.7.6", default-features=false}

mousefood = { version="0.3.0", default-features = false, features = [
    "fonts",
] }
ratatui = { version = "0.30", default-features = false }

ens160 = {version = "0.6.1", default-features = false, features = ["async"]}


#bme280 = { git = "https://github.com/RobinThrift/bme280-rs.git", version = "0.4", default-features = false, features = ["async"]}

bme280-rs = "0.3.0"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
